fix wrapping words in response

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -266,6 +266,7 @@ form .form-error {
   font-weight: 400;
   line-height: 1.2;
   text-align: center;
+  word-wrap: break-word;
 }
 
 form .form-error.is-error,
